# vertrouwelijke-data-proxy

./: .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: pre-commit.yml  test.yml
src/: Dockerfile  Makefile  manage.py  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
src/tests/: conftest.py  settings.py
src/tests/test_files/: test_views.py
src/vertrouwelijke_data_proxy/: settings.py  urls.py  views.py  wsgi.py
src/vertrouwelijke_data_proxy/files/: clients.py  permissions.py  urls.py  views.py
