[metadata]
name = vertrouwelijke-data-proxy
version = 0.1
description = Proxy service for confidential bulk data
long_description = Proxy service for confidential bulk data
url = https://api.data.amsterdam.nl/bulk-data-fp-mdw/
author = Amsterdam Datapunt
author_email = datapunt@amsterdam.nl
license = European Union Public Licence v1.2
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.2
    Intended Audience :: Developers
    License :: OSI Approved :: European Union Public Licence
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
include_package_data = true
packages =
    vertrouwelijke_data_proxy
